--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="TextItem" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:layout_margin">6dp</item>
+        <item name="android:layout_margin">@dimen/margin</item>
         <item name="android:textSize">18sp</item>
         <item name="android:text">@string/dummy</item>
     </style>
